2020-06-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/peeph.def: added rule 302

2020-05-30 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/ralloc.c (getRegBitTry): reverted to getRegBit
	  (serialRegAssign): prefer to spil bit over using register
	  (fillGaps): bug fix, do not change reg_type

2020-05-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Improve comparison with 0xff.

2020-05-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/ralloc2.cc,
	  src/pdk/gen.c,
	  support/regression/tests/bug-3007.c:
	  Improve jump-on-decrement.

2020-05-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/hc08/atomic_flag_test_and_set.c: fix warning
	* device/lib/s08/atomic_flag_test_and_set.c: fix warning

2020-05-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/ralloc2.cc,
	  src/pdk/gen.c,
	  support/regression/tests/bug-3007.c:
	  Fix bug #3007.

2020-05-28 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCcse.c (ifxOptimize): do not replace condition after '-' so
	  djnz and alike can be generated
	* src/mcs51/gen.c (aopOp, aopGet, aopPut, outBitC): bugfix, fill
	  aop_dir with "c" for ru_only and acc_use AOP_CRY
	  (genCmp): fixed warning
	* src/SDCCsymt.h: removed unused printSymChain, printStruct
	* src/hc08/gen.c (genAddrOf): increased buffer to fix warning

2020-05-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve stack operand range assertion.

2020-05-24 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/pdk13/Makefile.in,
	  device/lib/pdk13/__gptrget2.s,
	  device/lib/pdk13/__setjmp.s:
	  Fix missing asm support functions for pdk13.
	* Makefile.common.in,
	  Makefile.in,
	  configure.ac,
	  configure,
	  sdccconf_in.h:
	  Fix --disable-z80n-port configure option.

2020-05-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Stack operand range assertion.

2020-05-23 Maarten Brock <sourceforge.brock AT dse.nl>
