@@ -1,3 +1,10 @@
+2020-06-03 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCmem.c,
+	  src/SDCCast.c,
+	  support/valdiag/tests/bug-3010.c:
+	  Fix bug #3010.
+
 2020-06-02 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/mcs51/peeph.def: added rule 302
